unsupported chain handling

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -273,6 +273,39 @@
   margin: 0;
 }
 
+.error-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  gap: 12px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.error-icon {
+  width: 57.72px;
+  height: 57.72px;
+}
+
+.error-title {
+  font-family: "Public Sans", sans-serif;
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 700;
+  color: #FF3B30;
+  margin: 0;
+}
+
+.error-text {
+  font-family: "Public Sans", sans-serif;
+  font-size: 12px;
+  color: #637381;
+  margin: 0;
+}
+
 .footer-text {
   font-family: "Public Sans", sans-serif;
   font-size: 12px;
