--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,6 +12,8 @@
   justify-content: center;
   align-items: center;
   z-index: 998;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .modal-container {
